--- a/template-tcc1/bibliografia.bib
+++ b/template-tcc1/bibliografia.bib
@@ -2,51 +2,43 @@
 @article{frank1931,
 	Author = {R. T. Frank},
 	Title = {The hormonal causes of premenstrual tension},
-	Year = {1931},
-    Editor = {Arch. Neurol},
-    Url = {http://jamanetwork.com/journals/archneurpsyc/article-abstract/645067}
+	Year = {1931}
 }
 
 @article{poroma2014,
 	Author = {Inger Sundström Poromaa and Malin Gingnell},
 	Title = {Menstrual cycle influence on cognitive function and emotion processing—from a reproductive perspective},
-	Year = {2014},
-	Url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4241821/}
+	Year = {2014}
 }
 
 @article{rosa2016,
 	Author = {Thaniery Xavier Rosa and Sandra Cristina Catelan-Mainardes},
 	Title = {ALTERAÇÕES COMPORTAMENTAIS DURANTE O CICLO MENSTRUAL DA MULHER},
-	Year = {2016},
-	Url = {http://rdu.unicesumar.edu.br/bitstream/123456789/2926/1/thaniery_xavier_rosa_1.pdf}
+	Year = {2016}
 }
 
 @article{becker2005,
 	Author = {J. B. Becker and A. P. Arnold and J. K. Berkley and J. D. Blaustein and A. L. Eckel and E. Hampson and et al},
 	Title = { Strategies and methods for research on sex differences in brain and behavior},
-	Year = {2005},
-	Url = {https://www.ncbi.nlm.nih.gov/pubmed/15618360}
+	Year = {2005}
 }
 
 @article{lenton1984a,
 	Author = {E. A. Lenton and B. M. Landgren and L. Sexton and R. Harper},
 	Title = {Normal variation in the length of the follicular phase of the menstrual cycle: effect of chronological age},
-	Year = {1984},
-	Url = {https://www.ncbi.nlm.nih.gov/pubmed/6743609}
+	Year = {1984}
 }
 
 @article{brondin2008,
 	Author = {T. Brodin and T. Bergh and L. Berglund and N. Hadziosmanovic and J. Holte},
 	Title = {Menstrual cycle length is an age-independent marker of female fertility: results from 6271 treatment cycles of in vitro fertilization},
-	Year = {2008},
-	Url = {https://www.ncbi.nlm.nih.gov/pubmed/18155201}
+	Year = {2008}
 }
 
 @article{phillips1992,
 	Author = {S. M. Phillips and B. B. Sherwin},
 	Title = {Variations in memory function and sex steroid hormones across the menstrual cycle.},
-	Year = {1992},
-	Url = {Psychoneuroendocrinology 17,497–506. doi: 10.1016/0306-4530(92)90008-U}
+	Year = {1992}
 }
 
 @book{fritz2010,
@@ -55,160 +47,139 @@ title = {Clinical Gynecologic Endocrinology and Infertility},
 year = {20010},
 edition = {8th},
 publisher = {Wolters Kluwer/Lippincott, Williams and Wilkins},
-address = {USA},
+address = {USA}
 }
 
 @article{nikas2003,
 	Author = {G. Nikas and A. Makrigiannakis},
 	Title = {Endometrial pinopodes and uterine receptivity},
-	Year = {2003},
-	Url = {https://www.ncbi.nlm.nih.gov/pubmed/14644817}
+	Year = {2003}
 }
 
 @article{bixo1997,
 	Author = {M. Bixo and A. Andersson and B. Winblad and R. H. Purdy and T. Backstrom},
 	Title = {5alpha-pregnane-3,20-dione and 3alpha-hydroxy-5alpha-pregnane-20-one in specific regions of the human female brain in different endocrine states.},
-	Year = {1997},
-	Url = {https://www.ncbi.nlm.nih.gov/pubmed/9295207}
+	Year = {1997}
 }
 
 @article{gruber2002,
 	Author = {C. J. Gruber and W. Tschugguel and C. Schneeberger and J. C. Huber},
 	Title = {Production and actions of estrogens},
-	Year = {2002},
-	Url = {https://www.ncbi.nlm.nih.gov/pubmed/11821512}
+	Year = {2002}
 }
 
 @article{brinton2008,
 	Author = {R. D. Brinton and F. R. Thompson and M. R. Foy and M. Baudry and J. Wang and C. E. and et al.},
 	Title = {Progesterone receptors: form and function in brain. Front. Neuroendocrinol},
-	Year = {2008},
-	Url = {https://www.ncbi.nlm.nih.gov/pubmed/18374402}
+	Year = {2008}
 }
 
 @article{gasbarri2008,
 	Author = {A . Gasbarri and A. Pompili and A. d’Onofrio and A. Cifariello and M. C. Tavares and C. Tomaz},
 	Title = { Working memory for emotional facial expressions: role of the estrogen in young women},
-	Year = {2008},
-	Url = {https://www.ncbi.nlm.nih.gov/pubmed/18667277}
+	Year = {2008}
 }
 
 @article{derntl2008,
 	Author = {B. Derntl and I. Kryspin-Exner and E. Fernbach and E. Moser and U. Habel },
 	Title = { Emotion recognition accuracy in healthy young females is associated with cycle phase},
-	Year = {2008},
-	Url = {https://www.ncbi.nlm.nih.gov/pubmed/17976599}
+	Year = {2008}
 }
 
 @article{kirschbaum1999,
 	Author = {C. Kirschbaum and B. M. Kudielka and J. Gaab and N. C. Schommer and D. H. Hellhammer},
 	Title = { Impact of gender, menstrual cycle phase, and oral contraceptives on the activity of the hypothalamus-pituitary-adrenal axis},
-	Year = {1999},
-	Url = {https://www.ncbi.nlm.nih.gov/pubmed/10204967}
+	Year = {1999}
 }
 
 @article{lam2002,
 	Author = {L. T. Lam and S. L. kirby},
 	Title = {Is Emotional Intelligence an Advantage? An Exploration of the Impact of Emotional and General Intelligence on Individual Performance},
-	Year = {2002},
-	Url = {https://www.ncbi.nlm.nih.gov/pubmed/11913831}
+	Year = {2002}
 }
 
 @article{salovey1990,
 	Author = {P. Salovey and J. D. Mayer},
 	Title = { Emotional intelligence. Imagination, Cognition, and Personality},
-	Year = {1990},
-	Url = {https://journals.sagepub.com/doi/abs/10.2190/DUGG-P24E-52WK-6CDG}
+	Year = {1990}
 }
 
 @article{ecochard2001,
 	Author = {R. Ecochard and H. Boehringer and M. Rabilloud and H. Marret},
 	Title = { Chronological aspects of ultrasonic, hormonal and other indirect indices of ovulation},
-	Year = {2001},
-	Url = {https://www.ncbi.nlm.nih.gov/pubmed/11510707}
+	Year = {2001}
 }
 
 @article{wideman2013,
 	Author = {L. Wideman and M. M. Montgomery and B. J. Levine and B. D. Beynnon and S. J. Shultz},
 	Title = { Accuracy of Calendar-Based Methods for Assigning Menstrual Cycle Phase in Women},
-	Year = {2013},
-	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+	Year = {2013}
 }
 
 @article{hausmann2000,
 	Author = {M. Hausmann and D. Slabbekoorn and SHM Van Goozen },
 	Title = {Sex hormones affect spatial abilities during the menstrual cycle},
-	Year = {2000},
-	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+	Year = {2000}
 }
 
 @article{Rosenberg2002,
 	Author = {L. Rosenberg and S. Park},
 	Title = {Verbal and spatial functions across the menstrual cycle in healthy young women},
-	Year = {2002},
-	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+	Year = {2002}
 }
 
 @article{derntl2013,
 	Author = {B. Derntl and R. L. Hack and I. Kryspin-Exner and U. Habel},
 	Title = {Association of menstrual cycle phase with the core components of empathy},
-	Year = {2013},
-	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+	Year = {2013}
 }
 @article{obrien2011,
 	Author = {P. O’Brien and M. Backstrom and T. Brown and C. Dennerstein and L. Endicott and J.Epperson,},
 	Title = {Towards a consensus on diagnostic criteria, measurement and trial design of the premenstrual disorders: the ISPMD Montreal consensus},
-	Year = {2011},
-	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+	Year = {2011}
 }
+
 @article{mishell2005,
 	Author = {DR Mishell},
 	Title = {Premenstrual disorders: Epidemiology and disease burden},
-	Year = {2005},
-	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+	Year = {2005}
 }
 
 @article{biggs2011,
 	Author = {WS Biggs AND RH Demuth},
 	Title = {Premenstrual syndrome and premenstrual dysphoric disorder},
-	Year = {2011},
-	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+	Year = {2011}
 }
 
 @article{bobadilla2013,
 	Author = {J. Bobadilla and F. Ortega and A. Hernando and A. Gutiérrez},
 	Title = {Recommender systems survey},
-	Year = {2013},
-	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+	Year = {2013}
 }
 
 
 @article{adomavicius2005,
 	Author = {G. Adomavicius and A. Tuzhilin},
 	Title = {Toward the Next Generation of Recommender Systems: A Survey of the State-of-the-Art and Possible Extensions},
-	Year = {2005},
-	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+	Year = {2005}
 }
 
 @article{felferning2008,
 	Author = {A. Felfernig and R. Burke},
 	Title = {Constraint-based Recommender Systems: Technologies and Research Issues},
-	Year = {2008},
-	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+	Year = {2008}
 }
 
 @article{maki2002,
 	Author = {P. M. Make and J. B. Rich and R. S. Rosenbaum},
 	Title = {Implicit memory varies across the menstrual cycle: estrogen effects in young women},
-	Year = {2002},
-	Url = {Maki, P. M., Rich, J. B., and Rosenbaum, R. S. (2002). . Neuropsychologia 40, 518–529. doi: 10.1016/S0028-3932(01)00126-9}
+	Year = {2002}
 }
 
 @article{courvoisier2013,
 	Author = {D. S. Courvoisier and O. Renaud and C. Geiser and K. Paschke and K. Gaudy and K. Jordan},
 	Title = {Sex hormones and mental rotation: an intensive longitudinal investigation.},
-	Year = {2013},
-	Url = {Horm. Behav. 63, 345–351. doi: 10.1016/j.yhbeh.2012.12.007}
+	Year = {2013}
 }
 
 @article{hampson2014,
@@ -221,106 +192,91 @@ address = {USA},
 @article{becker1982,
 	Author = {D. Becker and O. D. Creutzfeldt and M. Schwibbe and W. Wuttke},
 	Title = {Changes in physiological, EEG and psychological parameters in women during the spontaneous menstrual cycle and following oral contraceptives.},
-	Year = {1982},
-	Url = {Psychoneuroendocrinology 7, 75–90. doi: 10.1016/0306-4530(82)90057-9}
+	Year = {1982}
 }
 
 @article{mordecai2008,
 	Author = {K. L. Mordecai and L. H. Rubin and P. M. Make},
 	Title = {Effects of menstrual cycle phase and oral contraceptive use on verbal memory},
-	Year = {2008},
-	Url = { Horm. Behav. 54, 286–293. doi: 10.1016/j.yhbeh.2008.03.006}
+	Year = {2008}
 }
 
 @article{solis2004,
 	Author = {S. Solis-Ortiz and M. A. Guevara and M. Corsi-Cabrera},
 	Title = {Performance in a test demanding prefrontal functions is favored by early luteal phase progesterone: an electroencephalographic study},
-	Year = {2004},
-	Url = {  Psychoneuroendocrinology 29, 1047–1057. doi:10.1016/j.psyneuen.2003.10.007}
+	Year = {2004}
 }
 
 @article{flutter2017,
 	Author = {Google},
 	Title = {Flutter},
-	Year = {2017},
-	Url = {https://flutter.dev/}
+	Year = {2017}
 }
 
 @article{firebase2011,
 	Author = {Google},
 	Title = {Firabase},
-	Year = {2011},
-	Url = {https://firebase.google.com/}
+	Year = {2011}
 }
 
 @article{trello2011,
 	Author = {Atlassian},
 	Title = {Trello},
-	Year = {2011},
-	Url = {https://trello.com/}
+	Year = {2011}
 }
 
 @article{zenhub2020,
 	Author = {ZenHub},
 	Title = {ZenHub},
-	Year = {2020},
-	Url = {https://www.zenhub.com/}
+	Year = {2020}
 }
 
 @article{slack2013,
 	Author = {Slack},
 	Title = {Slack},
-	Year = {2013},
-	Url = {https://slack.com/intl/pt-br/}
+	Year = {2013}
 }
 
 @article{vscode2015,
 	Author = {Visual Studio Code},
 	Title = {Visual Studio Code},
-	Year = {2015},
-	Url = {https://code.visualstudio.com/}
+	Year = {2015}
 }
 
 @article{lm2020,
 	Author = {Linux Mint},
 	Title = {Linux Mint},
-	Year = {2020},
-	Url = {https://linuxmint.com/}
+	Year = {2020}
 }
 
 @article{android2020,
 	Author = {Android Studio},
 	Title = {Android Studio},
-	Year = {2020},
-	Url = {https://developer.android.com/studio}
+	Year = {2020}
 }
 
 @article{git2020,
 	Author = {Git},
 	Title = {Git},
-	Year = {2020},
-	Url = {https://git-scm.com/}
+	Year = {2020}
 }
 
 @article{github2020,
 	Author = {GitHub},
 	Title = {GitHub},
-	Year = {2020},
-	Url = {https://github.com/}
+	Year = {2020}
 }
 
 @article{latex2020,
 	Author = {Latex},
 	Title = {Latex},
-	Year = {2020},
-	Url = {https://www.latex-project.org/}
+	Year = {2020}
 }
 
 @article{figma2020,
 	Author = {Figma},
 	Title = {Figma},
-	Year = {2020},
-	Url = {https://www.figma.com/}
+	Year = {2020}
 }
 
 @book{ACOG2000,
@@ -341,7 +297,6 @@ address = {Rio de Janeiro},
 	Author = {M. Serrano},
 	Title = {Um Sistema de Recomendação Para Mídias Baseado em Conteúdo Nebuloso},
 	Year = {2006},
-	Url = {https://repositorio.ufscar.br/bitstream/handle/ufscar/334/DissMS.pdf?sequence=1}
 }
 
 @article{paulson2003,
@@ -349,28 +304,24 @@ address = {Rio de Janeiro},
 	Title = {Combining Collaborative and Content-Based Filtering Using
 Conceptual Graphs },
 	Year = {2003},
-	Url = {https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.14.1917&rep=rep1&type=pdf}
 }
 
 @article{son2017,
 	Author = {J. Son and S. B. Kim},
 	Title = {Content-based filtering for recommendation systems using multiattribute networks },
 	Year = {2017},
-	Url = {https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.14.1917&rep=rep1&type=pdf}
 }
 
 @article{breese2013,
 	Author = {J. S. Breese and D, Heckerman and C. Kadie },
 	Title = {Empirical Analysis of Predictive Algorithms for Collaborative Filtering },
 	Year = {2013},
-	Url = {https://arxiv.org/pdf/1301.7363.pdf}
 }
 
 @article{burke2002,
 	Author = {R. Burke },
 	Title = {Hybrid Recommender Systems: Survey and Experiments },
 	Year = {2002},
-	Url = {https://arxiv.org/pdf/1301.7363.pdf}
 }
 
 
@@ -398,4 +349,10 @@ publisher = {EDITORA ATLAS S.A},
 	Author = {B. G. Reed and B. R. Carr},
 	Title = {The Normal Menstrual Cycle and the Control of Ovulation},
 	Year = {2018}
+}
+
+@article{scrum2017,
+	Author = {SCRUM-GUIDE},
+	Title = {Scrum},
+	Year = {2017}
 }
