--- a/template-tcc1/editaveis/introducao.tex
+++ b/template-tcc1/editaveis/introducao.tex
@@ -197,7 +197,7 @@ A monografia está organizada nos seguintes capítulos:
 
         \item Capítulo 2 - Referencial Teórico: descreve os conceitos que fundamentam o trabalho e o conhecimento necessário para que se compreenda a pesquisa realizada;
         
-        \item Capítulo 3 - Referencial Tecnológico: aborda os principais suportes tecnológicos que viabilizarão o desenvolvimento da proposta;
+        \item Capítulo 3 - Suporte Tecnológico: aborda os principais suportes tecnológicos que viabilizarão o desenvolvimento da proposta;
         
         \item Capítulo 4 - Metodologia: acorda o plano metodológico que orienta o presente trabalho em termos conceituais, bem como de análise de resultados;
 
