--- a/template-tcc1/editaveis/proposta.tex
+++ b/template-tcc1/editaveis/proposta.tex
@@ -34,4 +34,4 @@
 \subsubsection{Desenvolvimeno Inicial do Aplicativo}
 
 
-\section{Considerações Finais}
+\section{Considerações Finais do Capítulo}
