--- a/template-tcc1/editaveis/referencialteorico.tex
+++ b/template-tcc1/editaveis/referencialteorico.tex
@@ -208,7 +208,7 @@ a partir do início do ciclo.
 \begin{figure}[h]
 	\centering
 	\includegraphics[keepaspectratio=true,scale=0.4]{figuras/Group1.pdf}
-	\caption{Calendário do Ciclo Menstrual e Suas Fases (Fonte: Elaborado pela Autora.)}
+	\caption{Calendário do Ciclo Menstrual e suas Fases (Fonte: Elaborado pela Autora.)}
         \label{fig02}
 \end{figure}
 
@@ -479,7 +479,7 @@ não se restringe a itens que o usuário ativo demonstrou interesse \cite{paulso
 
 \subsubsection{Filtragem Híbrida}
 
-Na filtragem híbrida, normalmente é utilizado a combinação da filtragem Colaborativa com a filtragem 
+Na filtragem híbrida, normalmente é utilizada a combinação da filtragem Colaborativa com a filtragem 
 baseada em conteúdo\cite{bobadilla2013}. A combinação de duas ou mais técnicas de recomendação tenta driblar as limitações de cada 
 técnica e permite explorar o que há de mais positivo nelas e obter um melhor desempenho \cite{burke2002}. 
 
@@ -532,7 +532,7 @@ A estratégia comum para resolver o problema do novo usuário consiste em recorr
 
 \section{Considerações Finais do Capítulo}
 
-Na tabela \ref{tab03}, a seguir, adaptada do trabalho de \citeonline{burke2002}, é possível observar o resumo dos pontos positivos e negativos das técnicas utilizadas no sistema de recomendação.
+Na tabela \ref{tab03}, adaptada do trabalho de \citeonline{burke2002}, é possível observar o resumo dos pontos positivos e negativos das técnicas utilizadas no sistema de recomendação.
 A Filtragem Híbrida utiliza duas ou mais dessas técnicas para tentar aproveitar o que há de melhor em cada uma e minimizar os pontos negativos.
 
 \begin{table}[]
